<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/dialog_btn_blue"
            android:hint="@string/report"
            android:textColorHint="@color/white">
        </TextView>
        <EditText
            android:textColor="#000000"
            android:textColorHint="#85b3ff"
            android:background="@color/white"
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_piz"
            android:layout_margin="16dp" />

        <EditText
            android:textColor="#000000"
            android:textColorHint="#85b3ff"
            android:background="@color/white"
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:hint="@string/sosinfo_piz"
            android:layout_height="410dp"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/import_img"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:hint="@string/import_img"
                android:textColor="#000000"
                android:textColorHint="#85b3ff" />

            <Button
                android:id="@+id/import_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:text="파일 첨부" />

        </LinearLayout>


        <Button
            android:id="@+id/send_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/text_gray"
            android:textColorHint="@color/white"
            android:hint="@string/send_sos"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</LinearLayout>




